--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1940,22 +1940,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "828998ec": {
-          "id": "828998ec",
-          "path": "js/moment-with-locales.min.js",
-          "output": "js/moment-with-locales.min-dist.js",
-          "name": "moment-with-locales.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "e7f6e6a6": {
           "id": "e7f6e6a6",
           "path": "js/bootstrap-datetimepicker.min.js",
@@ -1971,6 +1955,28 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "3e004c9f": {
+          "id": "3e004c9f",
+          "path": "edit_profile.html",
+          "output": "edit_profile.html",
+          "name": "edit_profile.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "49db5b61": {
+          "id": "49db5b61",
+          "path": "singin.html",
+          "output": "singin.html",
+          "name": "singin.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
