--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1977,6 +1977,22 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "828998ec": {
+          "id": "828998ec",
+          "path": "js/moment-with-locales.min.js",
+          "output": "js/moment-with-locales.min-dist.js",
+          "name": "moment-with-locales.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
