--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1993,6 +1993,44 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "dfa7d79e": {
+          "id": "dfa7d79e",
+          "path": "edit_menu.html",
+          "output": "edit_menu.html",
+          "name": "edit_menu.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "287472f5": {
+          "id": "287472f5",
+          "path": "js/angular.min.js",
+          "output": "js/angular.min-dist.js",
+          "name": "angular.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f18d3e7a": {
+          "id": "f18d3e7a",
+          "path": "master.html",
+          "output": "master.html",
+          "name": "master.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
