--- a/prepros.cfg
+++ b/prepros.cfg
@@ -32,6 +32,22 @@
           ],
           "type": "sass"
         },
+        "51310684": {
+          "id": "51310684",
+          "path": "js/angular/rangular-route.js",
+          "output": "js/angular/rangular-route-dist.js",
+          "name": "rangular-route.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "dc9eb28e": {
           "id": "dc9eb28e",
           "path": "scss/_bootstrap-compass.scss",
@@ -1852,17 +1868,6 @@
           ],
           "type": "sass"
         },
-        "2704bf38": {
-          "id": "2704bf38",
-          "path": "reg.html",
-          "output": "reg.html",
-          "name": "reg.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "7e70da7e": {
           "id": "7e70da7e",
           "path": "scss/style.scss",
@@ -1913,71 +1918,6 @@
           "parents": [],
           "type": "css"
         },
-        "f67801e1": {
-          "id": "f67801e1",
-          "path": "reg_prof.html",
-          "output": "reg_prof.html",
-          "name": "reg_prof.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "7842f6e1": {
-          "id": "7842f6e1",
-          "path": "js/jquery-1.11.1.min.js",
-          "output": "js/jquery-1.11.1.min-dist.js",
-          "name": "jquery-1.11.1.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "e7f6e6a6": {
-          "id": "e7f6e6a6",
-          "path": "js/bootstrap-datetimepicker.min.js",
-          "output": "js/bootstrap-datetimepicker.min-dist.js",
-          "name": "bootstrap-datetimepicker.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "3e004c9f": {
-          "id": "3e004c9f",
-          "path": "edit_profile.html",
-          "output": "edit_profile.html",
-          "name": "edit_profile.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "49db5b61": {
-          "id": "49db5b61",
-          "path": "singin.html",
-          "output": "singin.html",
-          "name": "singin.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "828998ec": {
           "id": "828998ec",
           "path": "js/moment-with-locales.min.js",
@@ -1994,21 +1934,43 @@
           "parents": [],
           "type": "javascript"
         },
-        "dfa7d79e": {
-          "id": "dfa7d79e",
-          "path": "edit_menu.html",
-          "output": "edit_menu.html",
-          "name": "edit_menu.html",
+        "f18d3e7a": {
+          "id": "f18d3e7a",
+          "path": "master.html",
+          "output": "master.html",
+          "name": "master.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "html"
         },
-        "287472f5": {
-          "id": "287472f5",
-          "path": "js/angular.min.js",
-          "output": "js/angular.min-dist.js",
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "134072d8": {
+          "id": "134072d8",
+          "path": "view/singin.html",
+          "output": "view/singin.html",
+          "name": "singin.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d0bdf1df": {
+          "id": "d0bdf1df",
+          "path": "js/angular/angular.min.js",
+          "output": "js/angular/angular.min-dist.js",
           "name": "angular.min.js",
           "category": "JS",
           "autoCompile": false,
@@ -2021,11 +1983,70 @@
           "parents": [],
           "type": "javascript"
         },
-        "f18d3e7a": {
-          "id": "f18d3e7a",
-          "path": "master.html",
-          "output": "master.html",
-          "name": "master.html",
+        "07019fae": {
+          "id": "07019fae",
+          "path": "js/angular/controllers.js",
+          "output": "js/angular/controllers-dist.js",
+          "name": "controllers.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "613281f2": {
+          "id": "613281f2",
+          "path": "js/jquery-2.1.4.min.js",
+          "output": "js/jquery-2.1.4.min-dist.js",
+          "name": "jquery-2.1.4.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "2f327526": {
+          "id": "2f327526",
+          "path": "js/angular/Auth.js",
+          "output": "js/angular/Auth-dist.js",
+          "name": "Auth.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c8b8e63c": {
+          "id": "c8b8e63c",
+          "path": "view/edit-menu.html",
+          "output": "view/edit-menu.html",
+          "name": "edit-menu.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2f7bdcb5": {
+          "id": "2f7bdcb5",
+          "path": "view/edit-profile.html",
+          "output": "view/edit-profile.html",
+          "name": "edit-profile.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
