--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2052,6 +2052,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "35c6f4b7": {
+          "id": "35c6f4b7",
+          "path": "view/singup.html",
+          "output": "view/singup.html",
+          "name": "singup.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
