--- a/prepros.cfg
+++ b/prepros.cfg
@@ -32,77 +32,6 @@
           ],
           "type": "sass"
         },
-        "51310684": {
-          "id": "51310684",
-          "path": "js/angular/rangular-route.js",
-          "output": "js/angular/rangular-route-dist.js",
-          "name": "rangular-route.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "0ffc35d4": {
-          "id": "0ffc35d4",
-          "path": "index.html",
-          "output": "index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "f18d3e7a": {
-          "id": "f18d3e7a",
-          "path": "master.html",
-          "output": "master.html",
-          "name": "master.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "c8b8e63c": {
-          "id": "c8b8e63c",
-          "path": "view/edit-menu.html",
-          "output": "view/edit-menu.html",
-          "name": "edit-menu.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "2f7bdcb5": {
-          "id": "2f7bdcb5",
-          "path": "view/edit-profile.html",
-          "output": "view/edit-profile.html",
-          "name": "edit-profile.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "134072d8": {
-          "id": "134072d8",
-          "path": "view/singin.html",
-          "output": "view/singin.html",
-          "name": "singin.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "35c6f4b7": {
           "id": "35c6f4b7",
           "path": "view/singup.html",
@@ -146,38 +75,6 @@
           "parents": [],
           "type": "css"
         },
-        "fb191e42": {
-          "id": "fb191e42",
-          "path": "js/bootstrap-sprockets.js",
-          "output": "js/bootstrap-sprockets-dist.js",
-          "name": "bootstrap-sprockets.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "fe2cfe0b": {
-          "id": "fe2cfe0b",
-          "path": "js/bootstrap.js",
-          "output": "js/bootstrap-dist.js",
-          "name": "bootstrap.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "d73b3391": {
           "id": "d73b3391",
           "path": "js/bootstrap.min.js",
@@ -199,262 +96,6 @@
           "path": "js/jquery-2.1.4.min.js",
           "output": "js/jquery-2.1.4.min-dist.js",
           "name": "jquery-2.1.4.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "828998ec": {
-          "id": "828998ec",
-          "path": "js/moment-with-locales.min.js",
-          "output": "js/moment-with-locales.min-dist.js",
-          "name": "moment-with-locales.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "d0bdf1df": {
-          "id": "d0bdf1df",
-          "path": "js/angular/angular.min.js",
-          "output": "js/angular/angular.min-dist.js",
-          "name": "angular.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "2f327526": {
-          "id": "2f327526",
-          "path": "js/angular/Auth.js",
-          "output": "js/angular/Auth-dist.js",
-          "name": "Auth.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "07019fae": {
-          "id": "07019fae",
-          "path": "js/angular/controllers.js",
-          "output": "js/angular/controllers-dist.js",
-          "name": "controllers.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "1c406020": {
-          "id": "1c406020",
-          "path": "js/bootstrap/affix.js",
-          "output": "js/bootstrap/affix-dist.js",
-          "name": "affix.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "cf0ad580": {
-          "id": "cf0ad580",
-          "path": "js/bootstrap/alert.js",
-          "output": "js/bootstrap/alert-dist.js",
-          "name": "alert.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "ad860435": {
-          "id": "ad860435",
-          "path": "js/bootstrap/button.js",
-          "output": "js/bootstrap/button-dist.js",
-          "name": "button.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "207f4d6a": {
-          "id": "207f4d6a",
-          "path": "js/bootstrap/carousel.js",
-          "output": "js/bootstrap/carousel-dist.js",
-          "name": "carousel.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "e0493519": {
-          "id": "e0493519",
-          "path": "js/bootstrap/collapse.js",
-          "output": "js/bootstrap/collapse-dist.js",
-          "name": "collapse.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "d67abe83": {
-          "id": "d67abe83",
-          "path": "js/bootstrap/dropdown.js",
-          "output": "js/bootstrap/dropdown-dist.js",
-          "name": "dropdown.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "9ba7abc8": {
-          "id": "9ba7abc8",
-          "path": "js/bootstrap/modal.js",
-          "output": "js/bootstrap/modal-dist.js",
-          "name": "modal.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "c57b5c73": {
-          "id": "c57b5c73",
-          "path": "js/bootstrap/popover.js",
-          "output": "js/bootstrap/popover-dist.js",
-          "name": "popover.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "0d1ed704": {
-          "id": "0d1ed704",
-          "path": "js/bootstrap/scrollspy.js",
-          "output": "js/bootstrap/scrollspy-dist.js",
-          "name": "scrollspy.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "781b623d": {
-          "id": "781b623d",
-          "path": "js/bootstrap/tab.js",
-          "output": "js/bootstrap/tab-dist.js",
-          "name": "tab.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "4ea8eb76": {
-          "id": "4ea8eb76",
-          "path": "js/bootstrap/tooltip.js",
-          "output": "js/bootstrap/tooltip-dist.js",
-          "name": "tooltip.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "fb65a74e": {
-          "id": "fb65a74e",
-          "path": "js/bootstrap/transition.js",
-          "output": "js/bootstrap/transition-dist.js",
-          "name": "transition.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2064,11 +1705,66 @@
           ],
           "type": "sass"
         },
-        "263dfaad": {
-          "id": "263dfaad",
-          "path": "js/app/app.js",
-          "output": "js/app/app-dist.js",
-          "name": "app.js",
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "f18d3e7a": {
+          "id": "f18d3e7a",
+          "path": "master.html",
+          "output": "master.html",
+          "name": "master.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2f7bdcb5": {
+          "id": "2f7bdcb5",
+          "path": "view/edit-profile.html",
+          "output": "view/edit-profile.html",
+          "name": "edit-profile.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "c8b8e63c": {
+          "id": "c8b8e63c",
+          "path": "view/edit-menu.html",
+          "output": "view/edit-menu.html",
+          "name": "edit-menu.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "134072d8": {
+          "id": "134072d8",
+          "path": "view/singin.html",
+          "output": "view/singin.html",
+          "name": "singin.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d0bdf1df": {
+          "id": "d0bdf1df",
+          "path": "js/angular/angular.min.js",
+          "output": "js/angular/angular.min-dist.js",
+          "name": "angular.min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2080,11 +1776,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "440fd6ae": {
-          "id": "440fd6ae",
-          "path": "js/app/authCtrl.js",
-          "output": "js/app/authCtrl-dist.js",
-          "name": "authCtrl.js",
+        "d3898c85": {
+          "id": "d3898c85",
+          "path": "js/angular/angular-route.min.js",
+          "output": "js/angular/angular-route.min-dist.js",
+          "name": "angular-route.min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2096,11 +1792,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "ca4a94ea": {
-          "id": "ca4a94ea",
-          "path": "js/app/data.js",
-          "output": "js/app/data-dist.js",
-          "name": "data.js",
+        "e0498f40": {
+          "id": "e0498f40",
+          "path": "js/angular/angular-animate.min.js",
+          "output": "js/angular/angular-animate.min-dist.js",
+          "name": "angular-animate.min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2112,11 +1808,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "8f468014": {
-          "id": "8f468014",
-          "path": "js/app/directives.js",
-          "output": "js/app/directives-dist.js",
-          "name": "directives.js",
+        "220aea55": {
+          "id": "220aea55",
+          "path": "js/app/controllers.js",
+          "output": "js/app/controllers-dist.js",
+          "name": "controllers.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2147,7 +1843,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": true
         },
         "deployment": {
           "ftpHost": "",
